# AppSnapshoter

./: .gitignore  AGENTS.md  ARCHITECTURE_ANALYSIS.md  LICENSE  README.md  README_EN.md  build.gradle.kts  meta-info.json  settings.gradle.kts
.github/workflows/: build.yml  release.yml
api/: build.gradle.kts  consumer-rules.pro
api/src/main/res/drawable/: app_add.xml  group_add_1.xml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable-anydpi/: cog_sync.xml  cog_transfer.xml  group_add.xml  (+2 more)
docs/: STRUCTURE.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt  title.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hiddenapi/: build.gradle.kts  consumer-rules.pro
io-nativefs/: build.gradle.kts  consumer-rules.pro
io-nativefs/src/main/jni/: CMakeLists.txt  native-filesystem.cpp
io-tar/: build.gradle.kts  consumer-rules.pro
io-tar/src/main/jni/: CMakeLists.txt  jni.cpp  tar-wrapper.cpp
io-zstd/: build.gradle.kts  consumer-rules.pro
io-zstd/src/main/jni/: CMakeLists.txt
native/: build.gradle.kts
provider/: AIDL_INTERFACE.md  build.gradle.kts  consumer-rules.pro
provider-appmanager/: AIDL_INTERFACE.md  build.gradle.kts
provider-appmanager/src/main/: AndroidManifest.xml
provider-datasyncer/: build.gradle.kts
provider-filesystem/: build.gradle.kts
provider-filesystem/src/main/: AndroidManifest.xml
systemapi/: build.gradle.kts  consumer-rules.pro
(+648 files in other folders)
